# grpc-template

./: LICENSE  README.md  init.sh
python_project/: Dockerfile  pyproject.toml
rust_project/: Cargo.toml  Dockerfile
